# minigitdiff

./: LICENSE  README.md  pyproject.toml
minidiff/: diff.py
minidiff/test/: test1.py  test2.py
