[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minigitdiff"
version = "0.1.0"
authors = [
  { name="Baki", email="bakitkt60@gmail.com" },
]
description = "CLI tool to show differences between two Python files"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
minidiff = "minidiff.diff:main"
